strider/ingress/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strider-ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /strider(/|$)(.*)
        backend:
          service:
            name: strider-api-svc
            port:
              number: 80
